# advanced-data-engineering-bootcamp

./: .gitignore  README.md  app.py  pyproject.toml  setup.py
.github/actions/: deploy.yml  setup.yml
.github/workflows/: deploy_dev.yml
data_lake/: base.py  stack.py
kinesis/: stack.py
local_scripts/: put_to_firehose.py
stack/: aws_cdk_stack.py
