[tool.poetry]
name = "advanced-data-engineering-bootcamp"
version = "0.1.0"
description = ""
authors = ["Felipe Whitaker <felipewhitaker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fake-web-events = {git = "https://github.com/felipewhitaker/fake-web-events"}
"aws-cdk.core" = "^1.122.0"
"aws-cdk.aws-s3" = "^1.124.0"

[tool.poetry.dev-dependencies]
poetry2setup = "^1.0.0"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
